@startuml
class CLIInterpreter {
    - Environment environment
    - commandsParser parser
    + run()
}

class commandsParser {
    + parse(String input): List<Command>
}

class Environment {
    + setVariable(String name, String value)
    + getVariable(String name): String
    + getWorkingDirectory(): String
    + setWorkingDirectory(String newDirectory)
}

interface Command {
    + execute(Environment environment, InputStream input, OutputStream output, List<String> args): void
}

class EchoCommand

class CatCommand

class WcCommand

class PwdCommand

class ExitCommand

CLIInterpreter --> commandsParser
CLIInterpreter --> Environment
commandsParser --> Command
Command <|-- EchoCommand
Command <|-- CatCommand
Command <|-- WcCommand
Command <|-- PwdCommand
Command <|-- ExitCommand
Command <|-- ChangeDirectoryCommand
Command <|-- ListFilesCommand

@enduml
